--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -19,7 +19,11 @@ jobs:
       # Login to GCP
       - uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       # gcloud configure docker
