--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -16,14 +16,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Login to GCP
+ # Login to GCP
       - uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v1'
-      with:
-        credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       # gcloud configure docker
