--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -23,6 +23,9 @@ jobs:
           echo "$GCP_CREDENTIALS" > gcp-key.json
           gcloud auth activate-service-account --key-file=gcp-key.json
           gcloud config set project $GCP_PROJECT_ID
+        env:
+          GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
