--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -6,35 +6,34 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to GCP
+    name: Setup Gcloud Account
     runs-on: ubuntu-latest
     environment: to-prod
     env:
       IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/site:latest
-      GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
-      GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-
     steps:
-      - name: Checkout Repository
+      # Git checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup GCP
-        run: |
-          echo "$GCP_CREDENTIALS" > gcp-key.json
-          gcloud auth activate-service-account --key-file=gcp-key.json
-          gcloud config set project $GCP_PROJECT_ID
-        env:
-          GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
-          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+ # Login to GCP
+      - uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
+      # gcloud configure docker
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
 
+      # build image
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME .
 
+      # push image to registry
       - name: Push Docker image
         run: docker push $IMAGE_NAME
 
+      # deploy image
       - name: Deploy Docker image
         run: gcloud run deploy site --image $IMAGE_NAME --region us-central1 --memory 128Mi --min-instances 0 --max-instances 1 --platform managed --port 80 --allow-unauthenticated
